Implement cl_gentle_voices and handle loading/playing correct sounds

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -752,6 +752,7 @@ seta cl_gentle 0			"client side gentle mode, master switch"
 seta cl_gentle_gibs 0		"client side gentle mode for gibs (cl_nogibs); when set to 1, white smoke replaces gibs, when set to 2, colorful clouds replace gibs"
 seta cl_gentle_messages 0	"client side gentle mode for frag messages/centerprints"
 seta cl_gentle_damage 0		"client side gentle mode for damage flash (hud_damage); when set to 1, a white flash replaces the blood image, when set to 2, a randomly colored flash is used instead"
+seta cl_gentle_voices 0		"client side gentle mode for player model voicelines"
 
 set cl_jetpack_attenuation 2 "jetpack sound attenuation"
 
