Fix Morosophos' code
source: https://gitlab.com/xonotic/xonotic-data.pk3dir/-/commit/f6a061a6b48a605ff5c11058b4b1cc2462c5f607

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -361,6 +361,7 @@ set g_cts 0 "CTS: complete the stage"
 set g_cts_selfdamage 1 "0 = disable all selfdamage and falldamage in cts"
 set g_cts_finish_kill_delay 2 "kill player this many seconds after stage completion to prevent cheating by starting out with more speed than otherwise possible; set it to 0 to not kill or to -1 to kill instantly"
 set g_cts_send_rankings_cnt 15 "send this number of map records to clients"
+set g_cts_cptimes_onlyself 0 "tournament mode: only show player's own checkpoint times"
 set g_cts_removeprojectiles 0 "remove projectiles when the player dies, to prevent using weapons earlier in the stage than intended"
 set g_cts_drop_monster_items 0 "allow killed monsters to drop their items"
 
