--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -361,7 +361,6 @@ set g_cts 0 "CTS: complete the stage"
 set g_cts_selfdamage 1 "0 = disable all selfdamage and falldamage in cts"
 set g_cts_finish_kill_delay 2 "kill player this many seconds after stage completion to prevent cheating by starting out with more speed than otherwise possible; set it to 0 to not kill or to -1 to kill instantly"
 set g_cts_send_rankings_cnt 15 "send this number of map records to clients"
-set g_cts_cptimes_onlyself 0 "tournament mode: only show player's own checkpoint times"
 set g_cts_removeprojectiles 0 "remove projectiles when the player dies, to prevent using weapons earlier in the stage than intended"
 set g_cts_drop_monster_items 0 "allow killed monsters to drop their items"
 
@@ -593,6 +592,7 @@ set g_race 0 "Race: be faster than your opponents"
 set g_race_qualifying_timelimit 0
 set g_race_qualifying_timelimit_override -1 "qualifying session time limit overriding the mapinfo specified one (use 0 to play without limit, and -1 to use the mapinfo's limit)"
 set g_race_teams 0	"when 2, 3, or 4, the race is played as a team game (the team members can add up their laps)"
+set g_race_cptimes_onlyself 0 "only show player's own checkpoint times"
 
 // ==========
 //  invasion
