--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -280,7 +280,7 @@ set g_teamdamage_threshold 40       "for teamplay_mode 4: threshold over which t
 set g_teamdamage_resetspeed 20      "for teamplay_mode 4: how fast player's teamdamage count decreases"
 
 set g_balance_teams 1 "automatically balance out players entering instead of asking them for their preferred team"
-set g_balance_teams_prevent_imbalance 1 "prevent players from changing to larger teams"
+set g_balance_teams_prevent_imbalance 1 "prevent players from changing to larger teams during the match"
 set g_balance_teams_queue 0 "queue players to maintain balance when they join during the match"
 set g_balance_teams_remove 0 "remove excess players from teams to maintain balance when someone leaves (currently does nothing in matches with more than 2 teams)"
 set g_balance_teams_remove_wait 10 "seconds to warn everyone before removing an excess player (0 = immediately)"
