--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -286,7 +286,7 @@ set g_balance_teams_remove 0 "remove excess players from teams to maintain balan
 set g_balance_teams_remove_wait 10 "seconds to warn everyone before removing an excess player (0 = immediately)"
 set g_changeteam_banned 0 "not allowed to change team"
 
-set sv_teamnagger 2 "enable a nag message when the teams are unbalanced, value sets team size difference threshold, 1 is recommended when g_balance_teams_queue is enabled"
+set sv_teamnagger 2 "enable a nag message when the teams are unbalanced, value sets team size difference threshold, 1 is recommended when g_balance_teams_queue is enabled, g_warmup won't end while the message is visible"
 
 set g_bloodloss 0   "amount of health below which blood loss occurs"
 
