join queue: disable in singleplayer, improve description
Fixes https://gitlab.com/xonotic/xonotic-data.pk3dir/-/issues/2905

--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -281,7 +281,7 @@ set g_teamdamage_resetspeed 20      "for teamplay_mode 4: how fast player's team
 
 set g_balance_teams 1 "automatically balance out players entering instead of asking them for their preferred team"
 set g_balance_teams_prevent_imbalance 1 "prevent players from changing to larger teams during the match"
-set g_balance_teams_queue 0 "queue players to maintain balance when they join during the match"
+set g_balance_teams_queue 0 "queue players to maintain balance when they join during the match, any bots should be added with minplayers_per_team instead of bot_number so humans can replace them instead of waiting in queue while a bot plays"
 set g_balance_teams_remove 0 "remove excess players from teams to maintain balance when someone leaves (currently does nothing in matches with more than 2 teams)"
 set g_balance_teams_remove_wait 10 "seconds to warn everyone before removing an excess player (0 = immediately)"
 set g_changeteam_banned 0 "not allowed to change team"
