Add a server-sided switch which replicates cl_race_cptimes_onlyself

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -594,6 +594,7 @@ set g_race 0 "Race: be faster than your opponents"
 set g_race_qualifying_timelimit 0
 set g_race_qualifying_timelimit_override -1 "qualifying session time limit overriding the mapinfo specified one (use 0 to play without limit, and -1 to use the mapinfo's limit)"
 set g_race_teams 0	"when 2, 3, or 4, the race is played as a team game (the team members can add up their laps)"
+set g_race_cptimes_onlyself 0 "only show player's own checkpoint times"
 
 // ==========
 //  invasion
