--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -710,7 +710,7 @@ alias cl_autoscreenshot_screenshot "alias cl_autoscreenshot_screenshot_s ""; tog
 seta cl_jetpack_jump 1 "Activate jetpack by pressing jump in the air. 0 = Disable, 1 = Stop when touching ground, 2 = Enable"
 
 seta cl_race_cptimes_showself 1 "Always show your own times as well as the current best on checkpoints in Race/CTS"
-seta cl_race_cptimes_onlyself 0 "Only show your own times on checkpoints in Race/CTS"
+seta cl_race_cptimes_onlyself 0 "Only show your own times on checkpoints in Race/CTS. Can be forced on by the server via g_race_cptimes_onlyself"
 
 seta cl_cts_noautoswitch 0 "Prevent forced switching to new weapons in CTS"
 
