add Infection gamemode: survivors must avoid getting infected
The game begins with only survivors. After a few seconds, a random
player will be selected to become infected. If a survivor is killed by
an infected player, the survivor will become infected. If all survivors
are dead, the infected win. If the infected fail to kill all survivors
within the timeframe, survivors win.

This commit is incomplete and will not work. Current issues:
- Fix game crash when a survivor is killed
- Mutators for setting what weapons infected have at their disposal

--- a/gamemodes-client.cfg
+++ b/gamemodes-client.cfg
@@ -30,6 +30,7 @@ alias cl_hook_gamestart_nb
 alias cl_hook_gamestart_cts
 alias cl_hook_gamestart_ka
 alias cl_hook_gamestart_ft
+alias cl_hook_gamestart_infect
 alias cl_hook_gamestart_inv
 alias cl_hook_gamestart_duel
 alias cl_hook_gamestart_mayhem
