--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -27,6 +27,7 @@ alias sv_hook_gamestart_nb
 alias sv_hook_gamestart_cts
 alias sv_hook_gamestart_ka
 alias sv_hook_gamestart_ft
+alias sv_hook_gamestart_infect
 alias sv_hook_gamestart_inv
 alias sv_hook_gamestart_duel
 alias sv_hook_gamestart_mayhem
@@ -53,6 +54,7 @@ alias sv_vote_gametype_hook_cts
 alias sv_vote_gametype_hook_dm
 alias sv_vote_gametype_hook_dom
 alias sv_vote_gametype_hook_ft
+alias sv_vote_gametype_hook_infection
 alias sv_vote_gametype_hook_inv
 alias sv_vote_gametype_hook_ka
 alias sv_vote_gametype_hook_kh
@@ -595,6 +597,16 @@ set g_race_qualifying_timelimit 0
 set g_race_qualifying_timelimit_override -1 "qualifying session time limit overriding the mapinfo specified one (use 0 to play without limit, and -1 to use the mapinfo's limit)"
 set g_race_teams 0	"when 2, 3, or 4, the race is played as a team game (the team members can add up their laps)"
 set g_race_cptimes_onlyself 0 "only show player's own checkpoint times"
+
+// ===========
+//  infection
+// ===========
+
+set g_infection 0 "Infection: survivors must avoid getting infected"
+set g_infection_round_timelimit 900 "maximum time for the infected to infect all survivors"
+set g_infection_warmup "how long the players will have time to run around the map before the round starts"
+set g_infection_infected_count "the minimum amount of players to infect"
+set g_infection_round_enddelay "seconds of delay for score evaluation after round could end"
 
 // ==========
 //  invasion
