Settings: migrate from r_water to r_water_cameraentitiesonly.
Makes sure that maps with warpzones don't suddenly turn on water
reflections too.

--- a/config_update.cfg
+++ b/config_update.cfg
@@ -20,8 +20,11 @@ alias _update_configversion_5 "r_shadow_realtime_world_lightmaps 1; _update_conf
 alias _update_configversion_6 "r_font_disable_freetype 0; utf8_enable 1; _update_configversion_7"
 
 // place to put further updates
-alias _update_configversion_7 ""
+alias _update_configversion_7 "r_water 1; _update_configversion_8"
+
+// place to put further updates
+alias _update_configversion_8 ""
 
 _update_configversion_$g_configversion
 
-set g_configversion 7
+set g_configversion 8
