--- a/effects-omg.cfg
+++ b/effects-omg.cfg
@@ -35,7 +35,7 @@ r_showsurfaces 3
 r_sky 0
 r_subdivisions_tolerance 16
 r_texture_dds_load 1
-r_water 0
+r_water_cameraentitiesonly 1
 r_water_resolutionmultiplier 0.25
 
 menu_sync
