--- a/effects-high.cfg
+++ b/effects-high.cfg
@@ -35,7 +35,7 @@ r_showsurfaces 0
 r_sky 1
 r_subdivisions_tolerance 3
 r_texture_dds_load 1
-r_water 1
+r_water_cameraentitiesonly 0
 r_water_resolutionmultiplier 0.25
 
 menu_sync
