--- a/effects-ultra.cfg
+++ b/effects-ultra.cfg
@@ -35,7 +35,7 @@ r_showsurfaces 0
 r_sky 1
 r_subdivisions_tolerance 2
 r_texture_dds_load 0
-r_water 1
+r_water_cameraentitiesonly 0
 r_water_resolutionmultiplier 0.5
 
 menu_sync
