Provide an off-switch for cts checkpoint splits
Some users described this feature as "flooding the console",
"cl_race_checkpoint_splits_console 0" disables the prints.

Their collection is not disabled so that users can still opt-in
when they get a good run and want to see the splits.

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -711,6 +711,7 @@ seta cl_jetpack_jump 1 "Activate jetpack by pressing jump in the air. 0 = Disabl
 
 seta cl_race_cptimes_showself 1 "Always show your own times as well as the current best on checkpoints in Race/CTS"
 seta cl_race_cptimes_onlyself 0 "Only show your own times on checkpoints in Race/CTS. Can be forced on by the server via g_race_cptimes_onlyself"
+seta cl_race_checkpoint_splits_console 1 "Print checkpoint splits to console"
 
 seta cl_cts_noautoswitch 0 "Prevent forced switching to new weapons in CTS"
 
