Add map list curation support to gametype votes

--- a/gamemodes-server.cfg
+++ b/gamemodes-server.cfg
@@ -72,6 +72,7 @@ alias sv_vote_gametype_hook_surv
 // sv_vote_gametype_*_type Must be set to the name of the gametype the option is based on
 // sv_vote_gametype_*_name Contains a human-readable name of the gametype
 // sv_vote_gametype_*_description Contains a longer description
+// sv_vote_gametype_*_maplist Optional list of maps for the gametype
 //set sv_vote_gametype_1v1ctf_type ctf
 //set sv_vote_gametype_1v1ctf_name "Capture the Flag Duel"
 //set sv_vote_gametype_1v1ctf_description "One vs One match in CTF"
