--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -374,6 +374,7 @@ set sv_vote_gametype_keeptwotime 10 "show only 2 options after this amount of ti
 set sv_vote_gametype_options "dm tdm ca ctf" "identifiers of gamemodes on the voting screen, can be custom (max 9 chars) - see example in server/server.cfg"
 set sv_vote_gametype_timeout 20 "how long the gametype vote screen lasts"
 set sv_vote_gametype_default_current 1 "Keep the current gametype if no one votes"
+set sv_vote_gametype_maplist_reset 1 "Reset g_maplist when switching to a new gametype"
 
 set g_chat_flood_spl 3 "normal chat: seconds between lines to not count as flooding"
 set g_chat_flood_lmax 2 "normal chat: maximum number of lines per chat message at once"
