--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -362,6 +362,10 @@ seta cl_announcer_maptime 3 "play announcer sound telling you the remaining mapt
 
 set snd_cdautopause 0
 
+// sound randomization
+snd_identicalsoundrandomization_time -0.1
+snd_identicalsoundrandomization_tics 1
+
 // aliases:
 alias +fire +attack
 alias -fire -attack
@@ -546,6 +550,8 @@ con_notify 0
 con_notifysize 10
 con_notifyalign 0
 con_textsize 10
+
+locs_enable 0 // we uses our own replacement of certain % codes in chat messages
 
 seta sbar_info_pos 0 "Y-axis distance from lower right corner for engine info prints" // script-ignore
 
@@ -774,8 +780,6 @@ seta cl_gentle_damage 0		"client side gentle mode for damage flash (hud_damage);
 
 set cl_jetpack_attenuation 2 "Jetpack sound attenuation" // script-ignore
 
-set cl_warpzone_usetrace 1 "do not touch"
-
 set cl_effects_lightningarc_simple 0
 set cl_effects_lightningarc_segmentlength 64
 set cl_effects_lightningarc_drift_start 0.45
@@ -905,9 +909,14 @@ seta _termsofservice_accepted 0
 // polygonoffset for submodel SUCKS SUCKS SUCKS (only a hack for quake1, we don't need that)
 r_polygonoffset_submodel_offset 0
 r_polygonoffset_submodel_factor 0
+
 // decals: need a higher polygonoffset than default to not compete with _decal surfaces too much
 r_polygonoffset_decals_offset -28
 r_polygonoffset_decals_factor 0
+
+// this is mainly for _decal entities (their shaders should use "polygonoffset" shader parameter) - this is "good enough" as it seems, but smaller than the decals one so these don't zfight decals
+mod_q3shader_default_polygonoffset -14
+mod_q3shader_default_polygonfactor 0
 
 // loading screen
 scr_loadingscreen_background 0
