Don't execute client config on dedicated server

--- a/xonotic-common.cfg
+++ b/xonotic-common.cfg
@@ -48,7 +48,11 @@ exec commands.cfg
 // this should be executed only once even on ruleset-votable servers, otherwise the tips would always start from 0
 if_dedicated exec help.cfg
 
-exec xonotic-client.cfg
+// TODO if possible remove client notification cvars from the server
+// only a few cvars in notifications.cfg are server settings
+if_dedicated exec notifications.cfg
+if_client exec xonotic-client.cfg
+
 exec xonotic-server.cfg
 
 set ekg 0	"throw huge amounts of gibs"
