Implement per-command flood control

--- a/commands.cfg
+++ b/commands.cfg
@@ -177,6 +177,7 @@ alias menu_showteamselect team_selection_show
 // ========================================================
 set sv_clientcommand_antispam_time 1 "Amount of seconds after a command before another command can be called again without being considered spam. (Use -1 for no antispam limit)"
 set sv_clientcommand_antispam_count 8 "Amount of commands considered spam before commands are rejected."
+set sv_clientcommand_antispam_percommand 1 "Apply separate antispam timers for each command"
 seta sv_status_privacy 1 "hide IP addresses from \"status\" and \"who\" replies shown to clients"
 seta cl_autoswitch 1 "automatically switch to newly picked up weapons if they are better than what you are carrying"
 
