--- a/mutators.cfg
+++ b/mutators.cfg
@@ -49,6 +49,7 @@ set g_instagib_blaster_keepdamage 0 "allow secondary fire to hurt players"
 set g_instagib_blaster_keepforce 0 "allow secondary fire to push players"
 set g_instagib_mirrordamage 0 "allow damage mirror instagib"
 set g_instagib_friendlypush 1 "allow pushing teammates with the vaporizer primary attack"
+set g_instagib_allow_jetpacks 0 "allow jetpacks and fuel regenerators to appear in maps"
 
 
 // ==========
