Add a show all checkbox to the Create menu to list previously hidden gametypes
Also remove now unused mutator and weapon arena list label

--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -491,6 +491,7 @@ seta menu_tooltips 1 "menu tooltips: 0 disabled, 1 enabled, 2 also shows cvar or
 set menu_picmip_bypass 0 "bypass texture quality enforcement based on system resources, not recommended and may cause crashes!"
 set menu_showboxes 0 "show item bounding boxes (debug)"
 set menu_cvarlist_onlymodified 0 "show only modified cvars in the cvar list"
+seta menu_create_show_all 0 "show most gametypes in the create menu"
 
 set menu_no_music_nor_welcome 0 "don't play the menu music and skip the welcome announcer"
 
