--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -60,6 +60,7 @@ set g_teleport_maxspeed 0 "maximum speed that a player can keep when going throu
 set g_teleport_minspeed 0 "minimum speed that a player can keep when going through a teleporter which affects speed"
 
 set g_respawn_ghosts 1 "if 1 dead bodies become ghosts and float away when the player respawns"
+set g_respawn_ghosts_gib 0 "spawn a ghost for gibbed players instantly"
 set g_respawn_ghosts_speed 5 "the speed with which respawn ghosts float and rotate"
 set g_respawn_ghosts_time 4.5 "amount of time a respawn ghost lasts before it starts fading out. 0 disables and ghosts fade when the body would"
 set g_respawn_ghosts_fadetime 1.5 "amount of time a respawn ghost takes to fade out"
