Race/CTS: Add clear_bestcptimes command to clear all your best checkpoint times

--- a/commands.cfg
+++ b/commands.cfg
@@ -182,6 +182,7 @@ seta cl_autoswitch 1 "automatically switch to newly picked up weapons if they ar
 
 // commented out commands are really only intended for internal use, or already have declaration in the engine
 alias autoswitch           "qc_cmd_cmd    autoswitch           ${* ?}" // Whether or not to switch automatically when getting a better weapon
+alias clear_bestcptimes    "qc_cmd_cmd    clear_bestcptimes    ${* ?}" // Clear all your best checkpoint times for this Race/CTS match
 alias clientversion        "qc_cmd_cmd    clientversion        ${* ?}" // Release version of the game
 alias join                 "qc_cmd_cmd    join                 ${* ?}" // Become a player in the game
 //alias kill               "qc_cmd_cmd    kill                 ${* ?}" // Become a member of the dead
