Add cl_hook_race_pb to run on client when they set a new personal best time

--- a/gamemodes-client.cfg
+++ b/gamemodes-client.cfg
@@ -39,3 +39,9 @@ alias cl_hook_gamestart_surv
 alias cl_hook_gameend
 alias cl_hook_shutdown
 alias cl_hook_activeweapon
+// called on client personal best set
+// $1 new pb time,
+// $2 old pb time,
+// $3 how much time the pb improved by
+// $4 new rank# on the leaderboard
+alias cl_hook_race_pb
