--- a/bal-wep-samual.cfg
+++ b/bal-wep-samual.cfg
@@ -41,6 +41,7 @@ set g_balance_shotgun_secondary_alt_refire 1.2
 set g_balance_shotgun_secondary_animtime 1.15
 set g_balance_shotgun_secondary_damage 80
 set g_balance_shotgun_secondary_force 200
+set g_balance_shotgun_secondary_melee_blockedbyfiring 0
 set g_balance_shotgun_secondary_melee_delay 0.25
 set g_balance_shotgun_secondary_melee_multihit 1
 set g_balance_shotgun_secondary_melee_no_doubleslap 1
