Show nextmap on HUD and rewrite nextmap from cvar to cmd

--- a/commands.cfg
+++ b/commands.cfg
@@ -249,6 +249,7 @@ alias gotomap              "qc_cmd_sv     gotomap              ${* ?}" // Simple
 alias lockteams            "qc_cmd_sv     lockteams            ${* ?}" // Disable the ability for players to switch or enter teams
 alias make_mapinfo         "qc_cmd_sv     make_mapinfo         ${* ?}" // Automatically rebuild mapinfo files
 alias moveplayer           "qc_cmd_sv     moveplayer           ${* ?}" // Change the team/status of a player
+alias nextmap              "qc_cmd_sv     nextmap              ${* ?}" // Set/Query the next map
 alias nospectators         "qc_cmd_sv     nospectators         ${* ?}" // Automatically remove spectators from a match
 alias printstats           "qc_cmd_sv     printstats           ${* ?}" // Dump eventlog player stats and other score information
 alias radarmap             "qc_cmd_sv     radarmap             ${* ?}" // Generate a radar image of the map
