--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -532,6 +532,8 @@ con_textsize 10
 
 seta sbar_info_pos 0 "Y-axis distance from lower right corner for engine info prints"
 
+set _nextmap "" "internal cvar, automatically synced with server's nextmap"
+
 // scoreboard
 seta scoreboard_columns default
 
