Use hud_colorset_* for most color-coded hud text
So far this only replaced e.g. ^2 with the relevant hud_colorset color cvar
Consequently added hud_colorset_grey_*
Also added hud_colorset_compare_* for cts/race and votes
Also added hud_colorset_relative_* for cts/race speed-splits. Not in use currently, but will be by !1351

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -14,11 +14,21 @@ seta hud_width 560 "2D virtual width for the hud"
 seta hud_colorset_foreground_1 "2" "primary priority (important names, etc)"
 seta hud_colorset_foreground_2 "3" "secondary priority (items, locations, numbers, etc)"
 seta hud_colorset_foreground_3 "4" "tertiary priority or relatively inconsequential text"
-seta hud_colorset_foreground_4 "1" "notice/attention grabbing texting"
+seta hud_colorset_foreground_4 "1" "notice/attention grabbing text"
+seta hud_colorset_foreground_5 "5" "secondary attention grabbing text"
 seta hud_colorset_kill_1 "1" "'bad' or 'dangerous' text (death messages against you, kill notifications, etc)"
 seta hud_colorset_kill_2 "3" "similar to above, but less important... OR, a highlight out of above message type"
 seta hud_colorset_kill_3 "4" "'good' or 'beneficial' text (you fragging someone, etc)"
+seta hud_colorset_compare_1 "1" "'bad'/'no' in terms of some comparison (slower time in race, vote no, etc)"
+seta hud_colorset_compare_2 "3" "'neutral' in terms of some comparison (same time in race, etc)"
+seta hud_colorset_compare_3 "2" "'good'/'yes' in terms of some comparison (faster time in race, vote yes, etc)"
+seta hud_colorset_relative_1 "5" "'better' in terms of another comparison (faster speed in race, etc)"
+seta hud_colorset_relative_2 "3" "'neutral' in terms of another comparison (same speed in race, etc)"
+seta hud_colorset_relative_3 "6" "'worse' in terms of another comparison (slower speed in race, etc)"
 seta hud_colorset_background "7" "neutral/unimportant text"
+seta hud_colorset_grey_1 "8" "light grey text (less important text, etc)"
+seta hud_colorset_grey_2 "9" "grey text"
+seta hud_colorset_grey_3 "0" "dark grey text"
 
 seta hud_speed_unit "1" "speed unit (1 = qu/s, 2 = m/s, 3 = km/h, 4 = mph, 5 = knots)"
 
