Ask player if they want to forfeit on F3 press while playing. Allow F3 to switch from spectator to observer too
The F3 key now consistently works while playing and while spectating another player

--- a/commands.cfg
+++ b/commands.cfg
@@ -129,6 +129,7 @@ alias menu_showhudoptions "menu_cmd directpanelhudmenu ${* ?}"
 alias menu_showsandboxtools "menu_cmd directmenu SandboxTools"
 alias menu_showquitdialog "menu_cmd directmenu Quit"
 alias menu_showgamemenudialog "menu_cmd directmenu GameMenu"
+alias menu_showforfeitdialog "menu_cmd directmenu Forfeit"
 alias menu_showmonstertools "menu_cmd directmenu MonsterTools"
 
 // command executed before loading a map by the menu
