--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -107,8 +107,10 @@ seta hud_panel_engineinfo_framecounter_exponentialmovingaverage_instantupdate_ch
 seta hud_panel_engineinfo_framecounter_decimals "0" "amount of decimals to show"
 seta hud_panel_engineinfo_framecounter_time "0.1" "time between framerate display updates"
 
-seta hud_panel_physics_acceleration_movingaverage 1 "use an averaging method for calculating acceleration instead of the real value"
-seta hud_panel_physics_update_interval 0.016 "how often (in seconds) numeric values get updated on screen"
+seta hud_panel_physics_acceleration_movingaverage "1" "use an averaging method for calculating acceleration instead of the real value"
+seta hud_panel_physics_update_interval "0.016" "how often (in seconds) numeric values get updated on screen"
+seta hud_panel_physics_jumpspeed "0" "also show jump speed, replacing the speed unit text"
+seta hud_panel_physics_jumpspeed_time "1" "how many seconds the jump speed takes to fade out"
 
 seta hud_panel_itemstime_progressbar_maxtime "30" "when left time is at least this amount, the status bar is full"
 seta hud_panel_itemstime_hidespawned "1" "if 1 hide an item from the panel when all the occurrences of it are available again; if 2 hide it when at least one occurrence is available again"
