Fix issues with physics hud jumpspeed
Previous commit broke the previous-speed caching
Made it use xy-speed rather than xyz-speed (ignores vertical speed)
Made the cvar description reflect that it ignores vertical speed
Used previous-frame speed rather than current frame -- acceleration after
the jump would've already happened in the current frame

--- a/_hud_common.cfg
+++ b/_hud_common.cfg
@@ -111,7 +111,7 @@ seta hud_panel_physics_acceleration_movingaverage "1" "use an averaging method f
 seta hud_panel_physics_acceleration_movingaverage_strength "10" "weighting given to the current value in the movingaverage averaging method"
 seta hud_panel_physics_acceleration_max_slick "-1" "acceleration progressbar gets completely filled up by this value (in g) while on slick, -1 = same as the normal max"
 seta hud_panel_physics_update_interval "0.016" "how often (in seconds) numeric values get updated on screen"
-seta hud_panel_physics_jumpspeed "0" "also show jump speed, replacing the speed unit text"
+seta hud_panel_physics_jumpspeed "0" "also show jump speed, replacing the speed unit text (NOTE: ignores vertical speed)"
 seta hud_panel_physics_jumpspeed_time "1" "how many seconds the jump speed takes to fade out"
 
 seta hud_panel_itemstime_progressbar_maxtime "30" "when left time is at least this amount, the status bar is full"
