Make physics hud text sizing & centering consistent
Regarding jumpspeed/topspeed/speed unit:
- If only one is enabled, it'll be large, and centered
- If jumpspeed/topspeed are both drawn, they'll be equal size
- If speed unit and one other are drawn, the unit will be slightly smaller
Previously it was inconsistent

--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -256,7 +256,7 @@ seta hud_panel_physics_acceleration_progressbar_nonlinear "" "use a non linear f
 seta hud_panel_physics_acceleration_vertical "" "include the acceleration on the Z-axis"
 seta hud_panel_physics_text "" "show text in panel (2 = only for speed; 3 = only for acceleration)"
 seta hud_panel_physics_text_scale "" "scale text height by this factor"
-seta hud_panel_physics_speed_unit_show "" "also show speed unit"
+seta hud_panel_physics_speed_unit_show "" "also show speed unit (NOTE: overriden if both topspeed and jumpspeed are shown)"
 seta hud_panel_physics_speed_max "" "speed progressbar gets filled up completely by this value (in qu/s)"
 seta hud_panel_physics_speed_vertical "" "include the speed on the Z-axis"
 seta hud_panel_physics_topspeed "" "also show top speed"
