Loosen jumpspeed restrictions
Now it'll appear whenever z-velocity rises, rather than inconsistently
showing up based on whether the player was holding +jump in some cases
Also changed hud_panel_physics_speed_vertical description to reflect it
doesn't work for jumpspeed

--- a/_hud_descriptions.cfg
+++ b/_hud_descriptions.cfg
@@ -258,7 +258,7 @@ seta hud_panel_physics_text "" "show text in panel (2 = only for speed; 3 = only
 seta hud_panel_physics_text_scale "" "scale text height by this factor"
 seta hud_panel_physics_speed_unit_show "" "also show speed unit (NOTE: overriden if both topspeed and jumpspeed are shown)"
 seta hud_panel_physics_speed_max "" "speed progressbar gets filled up completely by this value (in qu/s)"
-seta hud_panel_physics_speed_vertical "" "include the speed on the Z-axis"
+seta hud_panel_physics_speed_vertical "" "include the speed on the Z-axis (NOTE: doesn't impact jumpspeed)"
 seta hud_panel_physics_topspeed "" "also show top speed"
 seta hud_panel_physics_topspeed_time "" "how many seconds the top speed takes to fade out"
 
