--- a/xonotic-client.cfg
+++ b/xonotic-client.cfg
@@ -821,6 +821,8 @@ r_useportalculling 1
 set cl_lerpanim_maxdelta_framegroups 0.05 // must be faster than fastest weapon refire
 set cl_lerpanim_maxdelta_server 0.1 // must be slower than slowest server controlled anim (e.g. animinfo stuff)
 
+r_nolerp_list ""
+
 // autodemo deleting
 seta cl_autodemo_delete_keeprecords 0 "when 1, records with a newly made race/cts demo are kept even if cl_autodemo_delete is used to delete demos"
 
